# GitWand

./: .gitignore  .release-notes-v1.6.2.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CORE-V2-ROADMAP.md  LAUNCHPAD_HOME_PLAN.md  LAUNCHPAD_INBOX_PLAN.md  PERFORMANCE_PLAN.md  PLAN-homepage-redesign.md  PLAN-quick-fixes.md  PLAN-v2.10-forge-integrations.md  PLAN-v2.12-branch-management-identity.md  PLAN-v2.16-pr-notifications.md  PLAN-v2.5-tie-in.md  PLAN-v2.9-launchpad.md  PLAN-workspace-launchpad-ux.md  README.md  ROADMAP.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.json  settings.local.json
.claude/agents/: gitwand-executor.md  gitwand-planner.md  gitwand-verifier.md
.claude/skills/add-pattern/: SKILL.md
.claude/skills/add-tauri-command/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/worktrees/flamboyant-leavitt-3c983d/: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PLAN-v1.6.md  audit-plan-remediation.md  core-analyse.md  pnpm-lock.yaml  tsconfig.base.json
.claude/worktrees/flamboyant-leavitt-3c983d/.claude/: settings.json
.claude/worktrees/flamboyant-leavitt-3c983d/.github/: RELEASE_TEMPLATE.md
.claude/worktrees/flamboyant-leavitt-3c983d/website/: changelog.md
.github/workflows/: ci.yml  deploy-website.yml  perf.yml  publish-vscode.yml  publish.yml  release.yml
apps/desktop/: CLAUDE.md  dev-server.mjs  index.html  package.json  vite.config.ts
apps/desktop/perf/: README.md  baseline.json  bench.mjs  bundle-check.mjs  last-run.json
apps/desktop/scripts/: copy-grammars.mjs  regen-latest-json.mjs
apps/desktop/src/: App.vue  CLAUDE.md  main.ts  test-setup.ts
apps/desktop/src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: parity_probe.rs
apps/desktop/src-tauri/src/: lib.rs  shell_env.rs  types.rs
apps/desktop/src-tauri/src/commands/: ai.rs  azure.rs  bitbucket.rs  credentials.rs  curl_util.rs  files.rs  gh.rs  github_api.rs  gitlab.rs  mcp_catalog.rs  mod.rs  network.rs  ops.rs  read.rs  scratch.rs  terminal.rs  workspace.rs
apps/desktop/src-tauri/src/git/: cmd.rs  libgit2.rs  mod.rs  parse.rs
apps/desktop/src/__tests__/: branchSort.test.ts  connectivity.test.ts  llm-fallback-integration.test.ts  useAIProvider-opencode.test.ts  worktreeParser.test.ts
apps/desktop/src/assets/: main.css
apps/desktop/src/components/: AgentSessionsPanel.vue  AiSparkle.vue  AppDock.vue  AppHeader.vue  AutomationsPanel.vue  BaseModal.vue  BranchDirtySwitchModal.vue  BranchNameField.vue  CherryPickPanel.vue  CloneModal.vue  CommandLogPanel.vue  CommitContextMenu.vue  CommitDiffViewer.vue  CommitGraph.vue  CommitLog.vue  ConflictAlert.vue  DashboardView.vue  DiffViewer.vue  EmptyState.vue  FileHistoryViewer.vue  FileList.vue  FolderDiffTree.vue  FolderPicker.vue  ForkModal.vue  HelpView.vue  HooksPanel.vue  ImageDiffViewer.vue  IssueDetailView.vue  LaunchpadView.vue  LlmTracePanel.vue  MergeEditor.vue  MergePreviewPanel.vue  MergeSuccessModal.vue  PrCommentThread.vue  PrCreateView.vue  PrDetailView.vue  PrInlineDiff.vue  PrIntelligencePanel.vue  PrListSidebar.vue  PrReactions.vue  (+18 more)
apps/desktop/src/composables/: branchPickerBridge.ts  useAIProvider.ts  useAbsorb.ts  useAccounts.ts  useAiPromptPresets.ts  useAppMenu.ts  useArchivedBranches.ts  useAvatar.ts  useAzureAuth.ts  useBlameContext.ts  useBranchName.ts  useCommandLog.ts  useCommitActions.ts  useCommitMessage.ts  useCommitSearch.ts  useCommitTemplates.ts  useConnectivity.ts  useCredentials.ts  useDeviceFlowAuth.ts  useFileTree.ts  useGitRepo.ts  useGitWand.ts  useGithubAuth.ts  useHunkExplanation.ts  useI18n.ts  useIdentity.ts  useInteractiveRebase.ts  useIssuePanel.ts  useLaunchpadInbox.ts  useLaunchpadIssues.ts  useLaunchpadNotifications.ts  useLaunchpadPins.ts  useLaunchpadPoller.ts  useLaunchpadPrs.ts  useLaunchpadScope.ts  useLaunchpadTeam.ts  useLaunchpadWip.ts  useLogs.ts  useMcpRegistry.ts  useMergePreview.ts  (+24 more)
apps/desktop/src/directives/: tooltip.ts
apps/desktop/src/locales/: en.ts  es.ts  fr.ts  index.ts  pt-BR.ts  zh-CN.ts
apps/desktop/src/utils/: backend-ai.ts  backend-bitbucket.ts  backend-core.ts  backend-gitlab.ts  backend-pr.ts  backend.ts  branchSort.ts  branchSwitchDecision.ts  dagLayout.ts  highlight.ts  imagePath.ts  networkGuard.ts  patchBuilder.ts  wordDiff.ts  worktreeParser.ts
apps/desktop/tests/parity/: README.md  fixtures.mjs  git-branches.test.mjs  git-commit-submodule-changes.test.mjs  git-stash-list.test.mjs  git-status.test.mjs  probe.mjs  (+2 more)
docs/superpowers/plans/: 2026-05-05-launchpad-pr5-pin-snooze.md  2026-06-17-conflits-arborescence.md  2026-06-17-resolution-globale-fichier.md  2026-06-18-conflits-contenu-sans-marqueurs.md  2026-06-18-dev-web-parity-conflict-commands.md
docs/superpowers/specs/: 2026-05-05-launchpad-pin-snooze-design.md  2026-05-05-launchpad-team-view-design.md  2026-06-17-conflits-arborescence-design.md  2026-06-17-resolution-globale-fichier-design.md  2026-06-18-conflits-contenu-sans-marqueurs-design.md
scripts/: bump-version.sh  repro-issue-48-appimage-curl.sh
website/: changelog.md  index.md  package.json
website/.vitepress/: config.ts
website/.vitepress/.temp/: app.js  guide_cli.md.js  guide_conflict-resolution.md.js  guide_desktop.md.js  guide_getting-started.md.js  guide_mcp.md.js  guide_vscode.md.js  index.md.js  reference_cli-commands.md.js  reference_config.md.js  reference_core-api.md.js
website/.vitepress/theme/: HomeLanding.vue
website/blog/: agent-sessions-automations-v2-8.md  claude-code-gitwand-ai-agents.md  contributing-to-open-source-with-forks.md  index.md  split-commit-by-hunks.md  v2-10-forge-integrations.md  v2-13-ai-inline-suggestions.md  v2-14-forge-completeness.md  v2-19-github-oauth-azure.md  v2-20-scratch-worktree-conflict-predictor.md  v2-23-changes-tree-view.md  v2-5-llm-fallback.md  v2-9-launchpad.md  why-i-built-another-git-client.md
website/guide/: ai.md  desktop.md  getting-started.md  llm-fallback.md  mcp.md  vscode.md
website/public/: robots.txt
website/public/.well-known/: api-catalog
(+152 files in other folders)
