[package]
name = "gitwand-desktop"
version = "1.5.0"
description = "GitWand Desktop — standalone merge conflict resolution"
authors = ["Laurent Guitton <lb.guitton@gmail.com>"]
license = "MIT"
edition = "2021"
# Disable Cargo's automatic bin discovery from `src/bin/`. The `parity-probe`
# binary is declared explicitly below with `required-features = ["parity-probe"]`;
# without this flag, Cargo also auto-discovers `src/bin/parity_probe.rs` as an
# implicit bin target *without* the feature gate, which breaks the
# `universal-apple-darwin` lipo step during the release build (the binary
# would exist for one arch but not the other, depending on feature state).
autobins = false

[lib]
name = "gitwand_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# ─── Parity probe (P2.3) ─────────────────────────────────────
#
# Petit binaire de test qui expose les commandes Tauri critiques en CLI,
# pour le harness de tests de parité Rust↔Node (`apps/desktop/tests/parity/`).
# Gardé sous feature flag `parity-probe` pour qu'il ne soit pas embarqué
# dans les builds de production.
#
# Build : `cargo build --features parity-probe --bin parity-probe`
[[bin]]
name = "parity-probe"
path = "src/bin/parity_probe.rs"
required-features = ["parity-probe"]

[features]
parity-probe = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
